# Kigurumi-static-data

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  arknights_characters.json  dev.docker-compose.yml  kiger.json  maker.json  pyproject.toml  run.py
.github/workflows/: test.yml
api/: auth.py  cache.py  database.py  github_service.py  main.py  models.py  schemas.py
crawler/: .env.example  __init__.py  main.py  pyproject.toml  twitter.py  twitter_crawler.py
scripts/: hash_password.py  init.sql  init_database.py  migrate_source_to_table.py  scrape_arknights.py  scrape_genshin.py  scrape_hsr.py  scrape_zzz.py
tests/: conftest.py  test_admin_pending.py  test_admin_review.py  test_admin_update.py  test_auth.py  test_crawl_endpoints.py  test_public_read.py  test_public_submit.py  test_workflow_e2e.py
