[project]
name = "kigurumi-static-data"
version = "0.1.0"
description = ""
authors = [
    {name = "phillychi3",email = "phillychi3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "google-genai (>=1.30.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cachetools (>=5.5.0,<6.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
]


[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
aiosqlite = ">=0.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
